<resources>
    <string name="app_name">Figuras Geometricas</string>
    <string name="lado">Ingrese valor del lado</string>
    <string name="Rcuadrado">Cuadrado</string>
    <string name="Rcirculo">Círculo</string>
    <string name="Rtriangulo">Triángulo</string>
    <string name="Rcubo">Cubo</string>
    <string name="area">Área</string>
    <string name="perimetro">Perímetro</string>
    <string name="radio">Ingrese el radio</string>
    <string name="base">Ingrese la base</string>
    <string name="altura">Ingrese la altura</string>
    <string name="volumen">Volumen</string>
</resources>
